# garmin_brief

./: .env.example  .gitignore  README.md  config.yaml  describe_task.md  pyproject.toml  vercel.json  Правила навыка.md
cron/: morning-brief.cron.example
deploy/: README.md  bootstrap-vps.sh  hermes-brief-trigger.service  hermes-brief-web.service  install-vps.sh  morning-brief.cron.vps  nginx-brief.conf.example
docs/: architecture.md  deploy-vercel.md  github-prepare.md  metrics-guide.md
scripts/: deploy_vercel.sh  login.py  publish_brief.py  republish_all_briefs.py  run_morning_brief.py  serve_brief.py  trigger_server.py
skills/: README.md  SKILL.md
skills/garmin-morning-brief/: SKILL.md
src/hermes/: __init__.py  config.py
src/hermes/analysis/: __init__.py  signal_scorer.py  trend.py
src/hermes/brief/: __init__.py  generator.py  narrative.py  publish.py  serialize.py  vercel_deploy.py
src/hermes/delivery/: __init__.py  channels.py
src/hermes/garmin/: __init__.py  auth.py  fetch.py
src/hermes/jobs/: morning_brief.py
src/hermes/models/: __init__.py  metrics.py
src/hermes/normalize/: __init__.py  recovery.py
src/hermes/storage/: history.py  json_store.py
src/hermes/trigger/: __init__.py  server.py
tests/: __init__.py  test_brief_url_validation.py  test_config.py  test_publish_nav.py  test_signal_scorer.py  test_trigger_server.py  test_vercel_deploy.py
web/: index.html
web/templates/: brief.html
