[project]
name = "hermes-garmin"
version = "0.1.0"
description = "Hermes morning recovery brief from Garmin Connect"
requires-python = ">=3.9"
dependencies = [
    "garminconnect",
    "curl_cffi",
    "python-dotenv",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
